Add Download Button

--- a/index2.html
+++ b/index2.html
@@ -171,7 +171,7 @@
                      <button id="editResume">Edit</button>
                      <button id="saveResume">Save</button><br/>
                      <button id="generateLink" >Generate Link</button>
-                     <!-- <button id="downloadResume">Download PDF</button> -->
+                     <button id="downloadResume">Download PDF</button>
                         </div>
                     </div>
                     <div id="shareLink" class="hidden">
@@ -181,6 +181,5 @@
                   </div>
               </div>   
             </div>
-            <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script> -->
-</body>
+            <body>
 </html>
